# pm_app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  README.md  config.py  database.py  dependencies.py  exceptions.py  firebase-service-account.example.json  main.py  permissions.py  pyproject.toml
backend/data/: mock_precursive.json
backend/integrations/: __init__.py  jira_client.py  precursive_client.py  salesforce_precursive_client.py
backend/integrations/precursive/: __init__.py  field_mapper.py  models.py  salesforce_schema.py
backend/middleware/: __init__.py  logging.py  request_context.py
backend/models/: __init__.py  action_item.py  comment.py  links.py  project.py  risk.py  sync_job.py  user.py
backend/repositories/: __init__.py  action_repository.py  base.py  comment_repository.py  project_repository.py  risk_repository.py  sync_job_repository.py  user_repository.py
backend/routers/: __init__.py  actions.py  auth.py  projects.py  risks.py  sync.py  uploads.py  users.py
backend/schemas/: __init__.py  auth.py  project.py  sync.py  user.py
backend/scripts/: discover_risk_schema.py  export_openapi.py  seed_qa_personas.py  test_precursive_auth.py
backend/serializers/: __init__.py  api_models.py
backend/services/: __init__.py  action_service.py  auth_service.py  project_service.py  risk_service.py  sync_job_service.py  sync_service.py  user_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_action_endpoints.py  test_project_endpoints.py  test_risk_endpoints.py
backend/tests/unit/: test_architecture.py  test_auth_router.py  test_permissions.py
backend/tests/unit/integrations/: test_precursive_mapper.py
backend/tests/unit/services/: test_action_service.py  test_project_service.py  test_risk_service.py  test_user_service.py
docs/: Automated Project Management Tools (1).md  Automated Project Management Tools.md  Backend_Architecture.md  Frontend_Architecture.md  Phase1_Completion_Plan.md  Plan.md  Precursive_Data_Guide_for_PMs.md  Technical_Requirements.md  precursive_schema_discovery.json  risk_schema_discovery.json
frontend/: .dependency-cruiser.cjs  .env.example  .eslintignore  .prettierrc  Dockerfile  next.config.js  openapi.json  orval.config.cjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/components/: ApiErrorDisplay.tsx  CommandMenu.tsx  ErrorBoundary.tsx  ImpersonationBar.tsx
frontend/components/comments/: CommentThread.tsx
frontend/components/dashboard/: CreateProjectModal.tsx  ProjectCard.tsx  ProjectList.tsx
frontend/components/project/: ActionTable.tsx  AssignUserModal.tsx  EditProjectModal.tsx  FinancialsCard.tsx  FinancialsChart.tsx  HealthIndicator.tsx  RiskList.tsx  RiskMatrix.tsx  SprintGoalsCard.tsx  SyncButton.tsx  SyncStatusCard.tsx  TeamSection.tsx  Timeline.tsx
frontend/components/providers/: AuthGuard.tsx  AuthProvider.tsx  QueryProvider.tsx
frontend/components/ui/: ImageUpload.tsx  button.tsx  card.tsx  checkbox.tsx  command-menu.tsx  dialog.tsx  input.tsx  popover.tsx  skeleton.tsx  tabs.tsx
frontend/hooks/: useActions.ts  useEffectiveUser.ts  useImpersonationPresets.ts  useProjects.ts  useRisks.ts  useSync.ts  useUsers.ts
frontend/lib/: api.ts  avatar.ts  error.ts  firebase.ts  permissions.ts
frontend/lib/api/: orvalMutator.ts  types.ts
frontend/lib/domain/: enums.ts
frontend/store/: authStore.ts
frontend/types/: actions-risks.ts  all.ts  index.ts
scripts/: pre-commit-hook
